grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 80.72.28.185
    cert-manager.io/issuer: gitlab-issuer
    kubernetes.io/ingress.class: nginx
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: monitoring.195-208-185-64.sslip.io  # Укажите свой домен или IP-адрес
    http:
      paths:
      - backend:
          service:
            name: grafana  # Укажите имя сервиса Grafana
            port:
              number: 80  # Укажите порт сервиса Grafana
        path: /
        pathType: Prefix   
  tls: 
  - hosts: 
    - monitoring.195-208-185-64.sslip.io  # Укажите свой домен или IP-адрес
    secretName: grafanassl
